<resources>
    <string name="app_name">Football Zone</string>
    <string name="home">Home</string>
    <string name="leagues">Leagues</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="no_internet">No internet</string>
    <string name="please_check_your_internet_connection">Please check your internet connection!</string>
    <string name="retry">Retry</string>
    <string name="exit">Exit</string>
    <string name="app_icon" translatable="false">App Icon</string>
    <string name="app_description">FootballZone is an Android application developed as part of the IAMU course to view football leagues, matches and tables based on data retrieved from an available API.</string>
    <string name="developed_by">Developed by</string>
    <string name="developer" translatable="false">Kristijan Gašpar</string>
    <string name="contact">Contact</string>
    <string name="developer_mail" translatable="false">gkristi@algebra.hr</string>
    <string name="rights">© 2026 All rights reserved</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="algebra_bernays_university">Algebra Bernays University</string>
    <string name="season" translatable="false">2023</string>
    <string name="data_sync_failed">Data sync failed.</string>
    <string name="about">About us</string>
    <string name="league_details">League details</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="venue">Venue</string>
    <string name="referee">Referee</string>
    <string name="standings">Standings</string>
    <string name="matches">Matches</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="city">City</string>
    <string name="no_favorite_matches">No favorite matches</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="notification_permission_denied">Notification permission denied</string>
    <string name="version">Version</string>
    <string name="_1_0_0" translatable="false">1.0.0</string>
    <string name="description">Description</string>
    <string name="select_language">Select language</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="_notifications">Notifications</string>
    <string name="_language">Language</string>
    <string name="about_application">About app</string>
    <string name="_about">About</string>
    <string name="rank" translatable="false">#</string>
    <string name="team">Team</string>
    <string name="pts">PTS</string>
    <string name="gd" translatable="false">GD</string>
    <string name="_dark_mode">Dark mode</string>
    <string name="general">General</string>
    <string name="appearance">Appearance</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="other">Other</string>
    <string name="_matches" translatable="false">Matches</string>
    <string name="match_details">Match details</string>
    <string name="about_app">About</string>
</resources>