<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AboutFragment"
    android:orientation="vertical"
    android:layout_margin="@dimen/_10dp">

    <ImageView
        android:layout_width="@dimen/_200dp"
        android:layout_height="@dimen/_100dp"
        android:layout_gravity="center"
        android:src="@drawable/new_logo_"
        android:contentDescription="@string/app_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:gravity="center"
        android:textSize="@dimen/_13sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/_4dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/_1_0_0"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginBottom="@dimen/_32dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:gravity="center"
        android:textSize="@dimen/_13sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/_4dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:gravity="center"
        android:textSize="@dimen/_14sp"
        android:textStyle="italic"
        android:lineSpacingExtra="@dimen/_4dp"
        android:layout_marginBottom="@dimen/_24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developed_by"
        android:gravity="center"
        android:textSize="@dimen/_14sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/_4dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/developer"
        android:textSize="@dimen/_13sp"
        android:layout_marginBottom="@dimen/_24dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:gravity="center"
        android:textSize="@dimen/_13sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/_4dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/developer_mail"
        android:gravity="center"
        android:textSize="@dimen/_13sp"
        android:autoLink="email"
        android:layout_marginBottom="@dimen/_24dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/algebra_bernays_university"
        android:gravity="center"
        android:textSize="@dimen/_14sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/_1dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rights"
        android:textSize="@dimen/_12sp"
        android:textColor="@android:color/darker_gray"
        android:gravity="center"
        android:layout_marginTop="@dimen/_16dp" />

</LinearLayout>