<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.StandingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <TextView
            android:layout_width="@dimen/_32dp"
            android:layout_height="wrap_content"
            android:text="@string/rank"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/team"
            android:textStyle="bold" />

        <TextView
            android:layout_width="@dimen/_48dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/pts"
            android:textStyle="bold" />

        <TextView
            android:layout_width="@dimen/_48dp"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/gd"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStandings"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>