<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="@dimen/_8dp">


        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_64dp"
            android:layout_height="@dimen/_64dp"
            app:cardCornerRadius="@dimen/_12dp"
            app:cardElevation="@dimen/_0dp"
            android:layout_marginEnd="@dimen/_12dp">

            <ImageView
                android:id="@+id/ivHomeLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"/>
        </com.google.android.material.card.MaterialCardView>

        <!-- SCORE + META -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sp"/>

            <TextView
                android:id="@+id/tvScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0 : 0"
                android:textSize="@dimen/_30sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/tvStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_12sp"/>


        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="@dimen/_64dp"
            android:layout_height="@dimen/_64dp"
            app:cardCornerRadius="@dimen/_12dp"
            app:cardElevation="0dp"

            android:layout_marginStart="@dimen/_12dp">

            <ImageView
                android:id="@+id/ivAwayLogo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitCenter"/>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <!-- TEAM NAMES -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/_24dp">

        <TextView
            android:id="@+id/tvHomeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/_18sp"
            tools:text="Arsenal"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvAwayName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="@dimen/_18sp"
            tools:text="Manchester City"
            android:textStyle="bold"/>
    </LinearLayout>

    <!-- DETAILS -->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="@dimen/_10dp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/venue"
        android:gravity="center"
        android:textSize="@dimen/_14sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/_4dp" />

    <TextView
        android:id="@+id/tvVenue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Old traford Stadium, London"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:gravity="center"
        android:textSize="@dimen/_14sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/_4dp" />

    <TextView
        android:id="@+id/tvCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Etihad Stadium, Mancester"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/_10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/referee"
        android:gravity="center"
        android:textSize="@dimen/_14sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/_4dp" />

    <TextView
        android:id="@+id/tvReferee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_24dp"
        tools:text="Pero Peric"
        android:layout_gravity="center"/>

    <!-- FAVORITE BUTTON -->
    <Button
        android:id="@+id/btnFavorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_to_favorites"/>

</LinearLayout>
